# deepReSearch

./: .cspell.json  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
deep_research/: __main__.py  config.py  context.py  llm.py  logger.py  utils.py
deep_research/agents/: analyst.py  planner.py
deep_research/resources/: document.py
deep_research/retrievers/: base.py  browser_google_search.py  duckduckgo_search.py  google_search.py
docs/: BuildingEffectiveAgent.md  DeepNote.md  qwen3.md
