[project]
name = "deepReSearch"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "backoff==2.2.1",
    "colorlog==6.9.0",
    "crawl4ai==0.6.3",
    "duckduckgo-search==8.0.1",
    "google-api-python-client==2.169.0",
    "langchain==0.3.25",
    "langchain-deepseek==0.1.3",
    "langchain-ollama==0.3.2",
    "langgraph==0.4.3",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
]

[tool.pyright]
stubPath = "./typings"
typeCheckingMode = "strict"
enableTypeIgnoreComments = false
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportMissingTypeStubs = false
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

[tool.ruff]
line-length = 99
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
    "FAST",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "CPY",
    "DTZ",
    "ISC",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "RSE",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "PL",
    "UP",
    "RUF",
    "TRY",
]
fixable = ["ALL"]
ignore = ["TRY003", "PLR0913", "UP040"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
